editando app.component.html e salvando imagem

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,2 @@
-<p>
-  <mat-toolbar color="primary" class="mat-elevation-z8 bg-primary">
-
-    <span>My App</span>
-    <span class="example-spacer"></span>
-
-
-  </mat-toolbar>
-</p>
-<p>home aqui</p>
-
-
-
-
-<section>
-  <div class="example-label">Raised</div>
-  <div class="example-button-row">
-    <button mat-raised-button>Basic</button>
-    <button mat-raised-button color="primary">Primary</button>
-    <button mat-raised-button color="accent">Accent</button>
-    <button mat-raised-button color="warn">Warn</button>
-    <button mat-raised-button disabled>Disabled</button>
-    <a mat-raised-button href="https://www.google.com/" target="_blank">Link</a>
-  </div>
-</section>
+<h1>{{ title }}</h1>
+<img class="img-thumbnail" src="url" alt="title">
