--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<h1>{{ title }}</h1>
-<img class="img-thumbnail" [src]="url" [alt]="title">
+<app-photo url="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Sultan_the_Barbary_Lion.jpg/440px-Sultan_the_Barbary_Lion.jpg.jpg" descriprtion="Imagem de um Notebook"></app-photo>
+<app-photo url="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Lioness_Etosha_NP.jpg/500px-Lioness_Etosha_NP.jpg" descriprtion="Imagem de um Notebook"></app-photo>
